# email-env-

./: .gitignore  Dockerfile  README.md  client.py  inference.py  models.py  openenv.yaml  pyproject.toml  setup.py
.github/workflows/: ci.yml
email_env/server/: app.py  email_env_environment.py  tasks.py
server/: app.py  data.json  email_env_environment.py  grader.py  tasks.py
tests/: test_grader.py
